[gd_scene load_steps=3 format=3 uid="uid://d1ybrpshw6lc6"]

[ext_resource type="Script" path="res://nodes/task_node/task_item.gd" id="1_efy2v"]
[ext_resource type="Texture2D" uid="uid://wxxfbne646dt" path="res://assets/trashcan.png" id="2_6k1sf"]

[node name="TaskItem" type="HBoxContainer"]
offset_right = 300.0
offset_bottom = 33.0
script = ExtResource("1_efy2v")

[node name="CheckBox" type="CheckBox" parent="."]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="Delete" type="Button" parent="."]
clip_contents = true
layout_mode = 2
size_flags_vertical = 4
icon = ExtResource("2_6k1sf")
icon_alignment = 1

[connection signal="toggled" from="CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="focus_exited" from="LineEdit" to="." method="_on_line_edit_focus_exited"]
[connection signal="pressed" from="Delete" to="." method="_on_delete_pressed"]
